@@ -140,7 +140,7 @@ public final class TreeUtils {
      * @return {@code true} iff the member is a member of {@code this} instance
      */
     public static boolean isSelfAccess(final ExpressionTree tree) {
-        ExpressionTree tr = TreeUtils.skipParens(tree);
+        ExpressionTree tr = TreeUtils.withoutParens(tree);
         // If method invocation check the method select
         if (tr.getKind() == Tree.Kind.ARRAY_ACCESS) {
             return false;
@@ -149,11 +149,11 @@ public final class TreeUtils {
         if (tree.getKind() == Tree.Kind.METHOD_INVOCATION) {
             tr = ((MethodInvocationTree) tree).getMethodSelect();
         }
-        tr = TreeUtils.skipParens(tr);
+        tr = TreeUtils.withoutParens(tr);
         if (tr.getKind() == Tree.Kind.TYPE_CAST) {
             tr = ((TypeCastTree) tr).getExpression();
         }
-        tr = TreeUtils.skipParens(tr);
+        tr = TreeUtils.withoutParens(tr);
 
         if (tr.getKind() == Tree.Kind.IDENTIFIER) {
             return true;
@@ -335,12 +335,25 @@ public final class TreeUtils {
      * @param tree an expression tree
      * @return the outermost non-parenthesized tree enclosed by the given tree
      */
-    public static ExpressionTree skipParens(final ExpressionTree tree) {
+    public static ExpressionTree withoutParens(final ExpressionTree tree) {
         ExpressionTree t = tree;
         while (t.getKind() == Tree.Kind.PARENTHESIZED) {
             t = ((ParenthesizedTree) t).getExpression();
         }
         return t;
+    }
+
+    /**
+     * If the given tree is a parenthesized tree, it returns the enclosed non-parenthesized tree.
+     * Otherwise, it returns the same tree.
+     *
+     * @param tree an expression tree
+     * @return the outermost non-parenthesized tree enclosed by the given tree
+     * @deprecated use {@link withoutParens}
+     */
+    @Deprecated // use withoutParens
+    public static ExpressionTree skipParens(final ExpressionTree tree) {
+        return withoutParens(tree);
     }
 
     /**
@@ -447,7 +460,7 @@ public final class TreeUtils {
         }
 
         if (isExpressionTree(tree)) {
-            tree = skipParens((ExpressionTree) tree);
+            tree = withoutParens((ExpressionTree) tree);
         }
 
         switch (tree.getKind()) {
@@ -604,7 +617,7 @@ public final class TreeUtils {
      * @return whether the tree refers to an identifier, member select, or method invocation
      */
     public static final boolean isUseOfElement(ExpressionTree node) {
-        node = TreeUtils.skipParens(node);
+        node = TreeUtils.withoutParens(node);
         switch (node.getKind()) {
             case IDENTIFIER:
             case MEMBER_SELECT:
@@ -726,7 +739,7 @@ public final class TreeUtils {
      * </ol>
      */
     public static boolean isCompileTimeString(ExpressionTree node) {
-        ExpressionTree tree = TreeUtils.skipParens(node);
+        ExpressionTree tree = TreeUtils.withoutParens(node);
         if (tree instanceof LiteralTree) {
             return true;
         }
@@ -745,7 +758,7 @@ public final class TreeUtils {
 
     /** Returns the receiver tree of a field access or a method invocation. */
     public static ExpressionTree getReceiverTree(ExpressionTree expression) {
-        ExpressionTree receiver = TreeUtils.skipParens(expression);
+        ExpressionTree receiver = TreeUtils.withoutParens(expression);
 
         if (!(receiver.getKind() == Tree.Kind.METHOD_INVOCATION
                 || receiver.getKind() == Tree.Kind.MEMBER_SELECT
@@ -773,7 +786,7 @@ public final class TreeUtils {
             // It's a field access on implicit this or a local variable/parameter.
             return null;
         } else if (receiver.getKind() == Tree.Kind.ARRAY_ACCESS) {
-            return TreeUtils.skipParens(((ArrayAccessTree) receiver).getExpression());
+            return TreeUtils.withoutParens(((ArrayAccessTree) receiver).getExpression());
         } else if (receiver.getKind() == Tree.Kind.MEMBER_SELECT) {
             receiver = ((MemberSelectTree) receiver).getExpression();
             // Avoid int.class
@@ -783,7 +796,7 @@ public final class TreeUtils {
         }
 
         // Receiver is now really just the receiver tree.
-        return TreeUtils.skipParens(receiver);
+        return TreeUtils.withoutParens(receiver);
     }
 
     // TODO: What about anonymous classes?
